# web

./: .gitignore  .mcp.json  Cargo.toml  package.json  pnpm-lock.yaml  render.yaml
.claude/: CLAUDE.md  settings.json
.codanna/: settings.toml
.github/workflows/: CI and CD.yml
lx/: Cargo.toml  README.md  Taxonomies and Data Structures.md
lx/.zed/: settings.json
lx/crates/json-feed/src/: v1_1.rs
lx/crates/markdown/: Cargo.toml
lx/crates/markdown/src/: lib.rs  second_pass.rs
lx/src/: archive.rs  build.rs  canonicalized.rs  feed.rs  main.rs  md.rs  page.rs  sass.rs  server.rs  style.rs
lx/src/data/: config.rs  email.rs  image.rs
lx/src/data/item/: cascade.rs  mod.rs  serial.rs
lx/src/templates/: component.rs  filters.rs  functions.rs  mod.rs  rendering.rs  view.rs
sites/_shared/_styles/: _index.css  basics.css  reset.css  reset.scss
sites/_shared/_styles/components/: _index.css  container.css  content.scss  email-subscribe.css  gallery.css  main-nav.css  site-header.css
sites/_shared/_styles/fonts/: _index.css  commercial-type.css
sites/_shared/_styles/foundations/: _index.css  color.scss  grid.css  scale.css  type.css
sites/_shared/_styles/layouts/: _index.css  common.css  link-page.css  link-page.scss  post.css  splash.css
sites/_shared/_ui/: head.jinja
sites/_shared/_ui/views/: twitter-label.jinja
sites/music/_styles/: style.css  style.scss
sites/music/_ui/: index.jinja  work.jinja
sites/music/content/pages/: index.md
sites/music/content/works/: desert-2024.md  fanfare-2023.md  holy-saturday-2025.md  sanctus-2024.md
sites/v6/: config.lx.yaml
sites/v6/.nova/: Configuration.json
sites/v6/.nova/Tasks/: Custom Task.json
sites/v6/_styles/: _animation.scss  _baselines.css  _baselines.scss  _colors.scss  _from-cascadea.scss  from-cascadea.css  style.css  style.scss
sites/v6/_styles/colors/: _colors.css  _colors.scss  _index.css  _index.scss  _themes.scss  colors.css  theme.css  themes.css
sites/v6/_styles/components/: _body.scss  _content.css  _content.scss  _index.css  _index.scss  _main.css  _main.scss  _note.css  _note.scss  blockquote.css  content.css  note.css  qualifiers.css
sites/v6/_ui/: base.jinja  feed.jinja  index.jinja  page.jinja
sites/v6/content/: feed.lx.xml  index.md
v6.bbprojectd/: WebSiteSettings.plist  chris.bbprojectsettings  project.bbprojectdata  project.lockfile
(+26 files in other folders)
