[package]
name = "lx-md"

authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
# keywords.workspace = true

[dependencies]
log = { workspace = true }
latex2mathml = "0.2"
lazy_static = { workspace = true }
pulldown-cmark = { version = "0.13", default-features = false, features = [
    "simd",
    "html",
] }
syntect = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
